--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">projectSE</string>
     <string name="action_settings">Settings</string>
+    <string name="button_title">Get Bananas</string>
+    <string name="notification_title">Bananas</string>
+    <string name="notification_subject">Get them while they\'re fresh!</string>
+    <string name="ticker_count_label">Number of notifications\:</string>
 </resources>
